--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 
   <section id="cta">
 
-    <h3 class="h3-cta">Find the True Love of Your Dog's Life Today.</h3>
+    <h3 class="h3-cta">Find the True Love of Your Dog's Life Today</h3>
 
     <button class="download-button btn btn-lg btn-dark" type="button"><i class="fa-brands fa-apple"></i> Download</button>
     <button class="download-button btn btn-lg btn-light" type="button"><i class="fa-brands fa-google-play"></i> Download</button>
